tests/th/T12411.hs
{-# LANGUAGE Haskell2010 #-}
{-# LANGUAGE TemplateHaskell #-}
module T12411 where

pure @Q []
